// This file is automatically generated by sila2lib.proto_builder.proto_builder version 0.2.0
// :generation date: 2021-10-08 10:53:38
//
// ---- PLEASE DO NOT MODIFY MANUALLY !! ---

syntax = "proto3";
import "SiLAFramework.proto";
package sila2.org.silastandard.test.datatypetest.v1;

// Feature: SiLA Data Type Test
//   
//           This is a test feature, which can be used to test various SiLA data types.
//           It provides commands and properties for each individual SiLA Data Type as parameter and response.
//           Furthermore a mixed datatype command with multiple SiLA data types as parameters and responses is defined.
//   
service DataTypeTest {
    // Echo String Value
    //   Echo the string that has been received.
    rpc EchoStringValue(sila2.org.silastandard.test.datatypetest.v1.EchoStringValue_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.EchoStringValue_Responses) {}
    // Echo Integer Value
    //   Echo the integer that has been received.
    rpc EchoIntegerValue(sila2.org.silastandard.test.datatypetest.v1.EchoIntegerValue_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.EchoIntegerValue_Responses) {}
    // Echo Real Value
    //   Echo a Real that has been received.
    rpc EchoRealValue(sila2.org.silastandard.test.datatypetest.v1.EchoRealValue_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.EchoRealValue_Responses) {}
    // Echo Boolean Value
    //   Echo a Boolean that has been received.
    rpc EchoBooleanValue(sila2.org.silastandard.test.datatypetest.v1.EchoBooleanValue_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.EchoBooleanValue_Responses) {}
    // Echo Binary Value
    //   Echo a Binary that has been received.
    rpc EchoBinaryValue(sila2.org.silastandard.test.datatypetest.v1.EchoBinaryValue_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.EchoBinaryValue_Responses) {}
    // Echo Date Value
    //   Echo a Date that has been received.
    rpc EchoDateValue(sila2.org.silastandard.test.datatypetest.v1.EchoDateValue_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.EchoDateValue_Responses) {}
    // Echo Time Value
    //   Echo a Time that has been received.
    rpc EchoTimeValue(sila2.org.silastandard.test.datatypetest.v1.EchoTimeValue_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.EchoTimeValue_Responses) {}
    // Echo Timestamp Value
    //   Echo a Timestamp that has been received.
    rpc EchoTimestampValue(sila2.org.silastandard.test.datatypetest.v1.EchoTimestampValue_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.EchoTimestampValue_Responses) {}
    // Echo String List
    //   Echo a List of String that has been received.
    rpc EchoStringList(sila2.org.silastandard.test.datatypetest.v1.EchoStringList_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.EchoStringList_Responses) {}
    // Echo Integer List
    //   Echo a List of Integer that has been received.
    rpc EchoIntegerList(sila2.org.silastandard.test.datatypetest.v1.EchoIntegerList_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.EchoIntegerList_Responses) {}
    // Echo Structure Values
    //   Echo values of different types that has been received.
    rpc EchoStructureValues(sila2.org.silastandard.test.datatypetest.v1.EchoStructureValues_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.EchoStructureValues_Responses) {}
    // Echo Multiple Mixed Values
    //   Echo multiple mixed values that has been received.
    rpc EchoMultipleMixedValues(sila2.org.silastandard.test.datatypetest.v1.EchoMultipleMixedValues_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.EchoMultipleMixedValues_Responses) {}
    // String Value
    //   Returns the string value 'SiLA2_Test_String_Value'.
    rpc Get_StringValue(sila2.org.silastandard.test.datatypetest.v1.Get_StringValue_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.Get_StringValue_Responses) {}
    // Integer Value
    //   Returns the integer value '42'.
    rpc Get_IntegerValue(sila2.org.silastandard.test.datatypetest.v1.Get_IntegerValue_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.Get_IntegerValue_Responses) {}
    // Real Value
    //   Returns the real value '3.1415926'.
    rpc Get_RealValue(sila2.org.silastandard.test.datatypetest.v1.Get_RealValue_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.Get_RealValue_Responses) {}
    // Boolean Value
    //   Returns the boolean value 'true'.
    rpc Get_BooleanValue(sila2.org.silastandard.test.datatypetest.v1.Get_BooleanValue_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.Get_BooleanValue_Responses) {}
    // Binary Value
    //   Returns the UTF-8 encoded string 'SiLA2_Test_String_Value' as Binary value.
    rpc Get_BinaryValue(sila2.org.silastandard.test.datatypetest.v1.Get_BinaryValue_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.Get_BinaryValue_Responses) {}
    // Date Value
    //   Returns the date value '2019-08-24' in ISO 8601 format, corresponding to US '08/24/2018' format.
    rpc Get_DateValue(sila2.org.silastandard.test.datatypetest.v1.Get_DateValue_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.Get_DateValue_Responses) {}
    // Time Value
    //   Returns the time value '12:34:56'.
    rpc Get_TimeValue(sila2.org.silastandard.test.datatypetest.v1.Get_TimeValue_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.Get_TimeValue_Responses) {}
    // Timestamp Value
    //   Returns the timestamp value '2019-08-24 12:34:56'.
    rpc Get_TimestampValue(sila2.org.silastandard.test.datatypetest.v1.Get_TimestampValue_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.Get_TimestampValue_Responses) {}
    // String List
    //   Returns a list with the following String values: 'SiLA 2', 'is', 'great'.
    rpc Get_StringList(sila2.org.silastandard.test.datatypetest.v1.Get_StringList_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.Get_StringList_Responses) {}
    // Integer List
    //   Returns a list with the following Integer values: '1', '2', '3'.
    rpc Get_IntegerList(sila2.org.silastandard.test.datatypetest.v1.Get_IntegerList_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.Get_IntegerList_Responses) {}
    // Structure Values
    //   
    //               Returns a Structure with the following values:
    //               String: 'SiLA2_Test_String_Value'
    //               Integer: '42'
    //               Real: '3.1415926'
    //               Boolean: 'true'
    //               Binary: 'SiLA2_Test_String_Value'
    //               Date: '2019-08-24'
    //               Time: '12:34:56'
    //               Timestamp: '2018-08-24 12:34:56'
    //   
    rpc Get_StructureValues(sila2.org.silastandard.test.datatypetest.v1.Get_StructureValues_Parameters) returns (sila2.org.silastandard.test.datatypetest.v1.Get_StructureValues_Responses) {}
    
}

// ----------------- Data Type definitions -----------------
// All Datatype Structure
//   All Datatype Structure
message DataType_AllDatatypeStructure {
    message AllDatatypeStructure_Struct {
        // String Structure Element
        //   String Structure Element.
        sila2.org.silastandard.String StringStructureElement = 1;
        // Integer Structure Element
        //   Integer Structure Element.
        sila2.org.silastandard.Integer IntegerStructureElement = 2;
        // Real Structure Element
        //   Real Structure Element.
        sila2.org.silastandard.Real RealStructureElement = 3;
        // Boolean Structure Element
        //   Boolean Structure Element.
        sila2.org.silastandard.Boolean BooleanStructureElement = 4;
        // Binary Structure Element
        //   Binary Structure Element.
        sila2.org.silastandard.Binary BinaryStructureElement = 5;
        // Date Structure Element
        //   Date Structure Element.
        sila2.org.silastandard.Date DateStructureElement = 6;
        // Time Structure Element
        //   Time Structure Element.
        sila2.org.silastandard.Time TimeStructureElement = 7;
        // Timestamp Structure Element
        //   Timestamp Structure Element.
        sila2.org.silastandard.Timestamp TimestampStructureElement = 8;
    }
    sila2.org.silastandard.test.datatypetest.v1.DataType_AllDatatypeStructure.AllDatatypeStructure_Struct AllDatatypeStructure = 1;
}

// ------ Command Parameter and Response definitions -------
message EchoStringValue_Parameters {
    sila2.org.silastandard.String StringValue = 1;
}

message EchoStringValue_Responses {
    sila2.org.silastandard.String ReceivedStringValue = 1;
}

message EchoIntegerValue_Parameters {
    sila2.org.silastandard.Integer IntegerValue = 1;
}

message EchoIntegerValue_Responses {
    sila2.org.silastandard.Integer ReceivedIntegerValue = 1;
}

message EchoRealValue_Parameters {
    sila2.org.silastandard.Real RealValue = 1;
}

message EchoRealValue_Responses {
    sila2.org.silastandard.Real ReceivedRealValue = 1;
}

message EchoBooleanValue_Parameters {
    sila2.org.silastandard.Boolean BooleanValue = 1;
}

message EchoBooleanValue_Responses {
    sila2.org.silastandard.Boolean ReceivedBooleanValue = 1;
}

message EchoBinaryValue_Parameters {
    sila2.org.silastandard.Binary BinaryValue = 1;
}

message EchoBinaryValue_Responses {
    sila2.org.silastandard.Binary ReceivedBinaryValue = 1;
}

message EchoDateValue_Parameters {
    sila2.org.silastandard.Date DateValue = 1;
}

message EchoDateValue_Responses {
    sila2.org.silastandard.Date ReceivedDateValue = 1;
}

message EchoTimeValue_Parameters {
    sila2.org.silastandard.Time TimeValue = 1;
}

message EchoTimeValue_Responses {
    sila2.org.silastandard.Time ReceivedTimeValue = 1;
}

message EchoTimestampValue_Parameters {
    sila2.org.silastandard.Timestamp TimestampValue = 1;
}

message EchoTimestampValue_Responses {
    sila2.org.silastandard.Timestamp ReceivedTimestampValue = 1;
}

message EchoStringList_Parameters {
    repeated sila2.org.silastandard.String StringList = 1;
}

message EchoStringList_Responses {
    repeated sila2.org.silastandard.String ReceivedValues = 1;
}

message EchoIntegerList_Parameters {
    repeated sila2.org.silastandard.Integer IntegerList = 1;
}

message EchoIntegerList_Responses {
    repeated sila2.org.silastandard.Integer ReceivedValues = 1;
}

message EchoStructureValues_Parameters {
    sila2.org.silastandard.test.datatypetest.v1.DataType_AllDatatypeStructure StructureValues = 1;
}

message EchoStructureValues_Responses {
    sila2.org.silastandard.test.datatypetest.v1.DataType_AllDatatypeStructure ReceivedValues = 1;
}

message EchoMultipleMixedValues_Parameters {
    sila2.org.silastandard.String StringValue = 1;
    sila2.org.silastandard.Integer IntegerValue = 2;
    sila2.org.silastandard.Real RealValue = 3;
    sila2.org.silastandard.Boolean BooleanValue = 4;
    sila2.org.silastandard.Date DateValue = 5;
    sila2.org.silastandard.Time TimeValue = 6;
    sila2.org.silastandard.Timestamp TimestampValue = 7;
}

message EchoMultipleMixedValues_Responses {
    sila2.org.silastandard.String ReceivedStringValue = 1;
    sila2.org.silastandard.Integer ReceivedIntegerValue = 2;
    sila2.org.silastandard.Real ReceivedRealValue = 3;
    sila2.org.silastandard.Boolean ReceivedBooleanValue = 4;
    sila2.org.silastandard.Binary ReceivedBinaryValue = 5;
    sila2.org.silastandard.Date ReceivedDateValue = 6;
    sila2.org.silastandard.Time ReceivedTimeValue = 7;
    sila2.org.silastandard.Timestamp ReceivedTimestampValue = 8;
}
message Get_StringValue_Parameters {
    // Empty message
}

message Get_StringValue_Responses {
    sila2.org.silastandard.String StringValue = 1;
}

message Get_IntegerValue_Parameters {
    // Empty message
}

message Get_IntegerValue_Responses {
    sila2.org.silastandard.Integer IntegerValue = 1;
}

message Get_RealValue_Parameters {
    // Empty message
}

message Get_RealValue_Responses {
    sila2.org.silastandard.Real RealValue = 1;
}

message Get_BooleanValue_Parameters {
    // Empty message
}

message Get_BooleanValue_Responses {
    sila2.org.silastandard.Boolean BooleanValue = 1;
}

message Get_BinaryValue_Parameters {
    // Empty message
}

message Get_BinaryValue_Responses {
    sila2.org.silastandard.Binary BinaryValue = 1;
}

message Get_DateValue_Parameters {
    // Empty message
}

message Get_DateValue_Responses {
    sila2.org.silastandard.Date DateValue = 1;
}

message Get_TimeValue_Parameters {
    // Empty message
}

message Get_TimeValue_Responses {
    sila2.org.silastandard.Time TimeValue = 1;
}

message Get_TimestampValue_Parameters {
    // Empty message
}

message Get_TimestampValue_Responses {
    sila2.org.silastandard.Timestamp TimestampValue = 1;
}

message Get_StringList_Parameters {
    // Empty message
}

message Get_StringList_Responses {
    repeated sila2.org.silastandard.String StringList = 1;
}

message Get_IntegerList_Parameters {
    // Empty message
}

message Get_IntegerList_Responses {
    repeated sila2.org.silastandard.Integer IntegerList = 1;
}

message Get_StructureValues_Parameters {
    // Empty message
}

message Get_StructureValues_Responses {
    sila2.org.silastandard.test.datatypetest.v1.DataType_AllDatatypeStructure StructureValues = 1;
}

// ----------------- Metadata Definitions ------------------
